--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-scripts": "5.0.1",
     "sass": "^1.69.6",
     "the-new-css-reset": "^1.11.2",
